# premium-silence

./: .gitignore  CMakeLists.txt  README.md
Plugins/: CMakeLists.txt
Plugins/NewPluginTemplate/: CMakeLists.txt
Plugins/NewPluginTemplate/Source/: MassivelyMultichannelAudioProcessor.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugins/PremiumSilence/: CMakeLists.txt
Plugins/PremiumSilence/Source/: PluginProcessor.cpp  PluginProcessor.h
Tests/: Tests.cpp
benchmarks/: Benchmarks.cpp
packaging/: dmg.json
source/: MassivelyMultichannelAudioProcessor.h  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
